Integrate textile
