# api/swagger/api/v1/marketplace/marketplace_service.swagger.json
@@ -572,19 +572,19 @@
         "content_type": {
           "type": "string"
         },
-        "url": {
-          "type": "string"
+        "status": {
+          "$ref": "#/definitions/marketplaceAssetStatus"
         },
         "thumbnail_url": {
           "type": "string"
         },
-        "playback_url": {
+        "preview_url": {
           "type": "string"
         },
-        "status": {
-          "$ref": "#/definitions/marketplaceAssetStatus"
+        "encrypted_url": {
+          "type": "string"
         },
-        "youtube_id": {
+        "yt_video_id": {
           "type": "string"
         }
       }
